--- a/lib/app.component.html
+++ b/lib/app.component.html
@@ -1,1 +1,18 @@
-<h1>Hello {{name}}</h1>
+<header class="material-header">
+    <div class="material-header-row">
+      <material-button icon class="material-drawer-button">
+        <material-icon icon="menu"></material-icon>
+      </material-button>
+      <span class="material-header-title">Hello {{title}}</span>
+      <div class="material-spacer"></div>
+      <nav class="material-navigation">
+        <a>Link 1</a>
+      </nav>
+      <nav class="material-navigation">
+        <a>Link 2</a>
+      </nav>
+      <nav class="material-navigation">
+        <a>Link 3</a>
+      </nav>
+    </div>
+  </header>
